feat: Update badges navigation to use dynamic routing with pubkey and enhance badge editing functionality

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -202,7 +202,7 @@
         <span>Calendar</span>
       </button>
       }
-      <button mat-menu-item routerLink="/badges">
+      <button mat-menu-item [routerLink]="['p', accountState.pubkey(), 'badges']">
         <mat-icon>badge</mat-icon>
         <span>Badges</span>
       </button>
