--- a/src/app/pages/badges/badges.component.scss
+++ b/src/app/pages/badges/badges.component.scss
@@ -21,6 +21,46 @@
   }
 }
 
+.back-button {
+  margin-right: 16px;
+}
+
+.profile-mini {
+  display: flex;
+  align-items: center;
+  flex: 1;
+
+  &-avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-right: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--mat-card-subtle-surface-color, #e0e0e0);
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    mat-icon {
+      font-size: 40px;
+      width: 40px;
+      height: 40px;
+      color: var(--mat-caption-text-color, #757575);
+    }
+  }
+
+  &-name {
+    margin: 0;
+    font-size: 18px;
+  }
+}
+
 .minimal-profile {
   display: flex;
   align-items: center;
