feat: Add badge count display and link to badges page in profile header

--- a/src/app/pages/profile/profile-header/profile-header.component.html
+++ b/src/app/pages/profile/profile-header/profile-header.component.html
@@ -195,6 +195,12 @@
         } @else {
         <span class="inline-error"> <mat-icon>error</mat-icon>&nbsp; No relays found! </span>
         }
+
+        @if (badgeCount() > 0) {
+        <a class="following-count" [routerLink]="'badges'" [queryParamsHandling]="'preserve'">
+          Badges {{ badgeCount() }}
+        </a>
+        }
         }
       </div>
 
