feat: Add Poll Event component with voting functionality and integrate into event types

--- a/src/app/components/comment-editor-dialog/comment-editor-dialog.component.html
+++ b/src/app/components/comment-editor-dialog/comment-editor-dialog.component.html
@@ -24,15 +24,17 @@
 
   <mat-dialog-actions align="end">
     <button mat-button (click)="onCancel()" [disabled]="isPublishing()">Cancel</button>
-    <button mat-flat-button color="primary" (click)="onPublish()" [disabled]="!content().trim() || isPublishing()">
-      @if (isPublishing()) {
+    @if (isPublishing()) {
+    <button mat-flat-button color="primary" [disabled]="true">
       <mat-icon>hourglass_empty</mat-icon>
       Publishing...
-      } @else {
+    </button>
+    } @else {
+    <button mat-flat-button color="primary" (click)="onPublish()" [disabled]="!content().trim()">
       <mat-icon>send</mat-icon>
       Publish Comment
-      }
     </button>
+    }
   </mat-dialog-actions>
 
   @if (isPublishing()) {
