--- a/src/app/components/navigation/navigation.scss
+++ b/src/app/components/navigation/navigation.scss
@@ -6,6 +6,28 @@
   border-radius: 4px;
 }
 
+.icon-button {
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  outline: none;
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:focus-visible {
+    outline: 2px solid currentColor;
+    outline-offset: 2px;
+    border-radius: 4px;
+  }
+}
+
 .back-button {
   margin-right: 4px;
   transition:
