--- a/src/app/pages/notifications/notifications.component.html
+++ b/src/app/pages/notifications/notifications.component.html
@@ -138,9 +138,9 @@
           <p>Technical notifications and system messages will appear here.</p>
         </div>
         } @else {
-        <cdk-virtual-scroll-viewport [itemSize]="100" class="notification-viewport">
-          <div *cdkVirtualFor="let notification of systemNotifications(); trackBy: trackByNotificationId"
-            class="notification-item" [class.unread]="!notification.read">
+        <div class="notification-list">
+          @for (notification of systemNotifications(); track trackByNotificationId($index, notification)) {
+          <div class="notification-item" [class.unread]="!notification.read">
             <div class="notification-icon-wrapper">
               <mat-icon class="notification-bell">notifications</mat-icon>
             </div>
@@ -183,7 +183,8 @@
               </button>
             </div>
           </div>
-        </cdk-virtual-scroll-viewport>
+          }
+        </div>
         }
       </mat-tab>
     </mat-tab-group>
