--- a/src/app/pages/profile/profile-header/profile-header.component.html
+++ b/src/app/pages/profile/profile-header/profile-header.component.html
@@ -97,6 +97,12 @@
         @if (isFavorite()) {
         <mat-icon class="favorite-indicator" matTooltip="Favorite User">star</mat-icon>
         }
+        @if (trustEnabled() && trustRank()) {
+        <span class="trust-rank" [matTooltip]="'Trust Rank: ' + trustRank() + '/100'">
+          <mat-icon>verified_user</mat-icon>
+          {{ trustRank() }}
+        </span>
+        }
       </h1>
 
       <div class="profile-item pointer" title="{{ npub() }}">
